--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
+  username: heridev
   host: localhost
   port: 5432
   # For details on connection pooling, see rails configuration guide
