Fixes invalid env variables

--- a/.env.prod
+++ b/.env.prod
@@ -7,5 +7,5 @@ DB_USER=postgres
 DB_PASSWORD=something
 ELASTIC_HOST=elasticsearch
 ELASTIC_PORT=9200
-REDIS__HOST=redis
+REDIS_HOST=redis
 REDIS_PORT=6379
